<resources>
    <string name="app_name">NotificationDemo</string>
    <string name="no_notification"> There are no notifications to display!! </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="banner_text">Welcome</string>
    <string name="user_name">Username</string>
    <string name="Password">Password</string>
    <string name="button_clear">CLEAR</string>
    <string name="button_login">LOGIN</string>


</resources>
