<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF033E"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.compay.xm.notificationdemo.activity.LoginActivity">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="340dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/layout_bg"
        android:gravity="center">


        <TextView
            android:id="@+id/textView"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="35dp"
            android:background="#3B444B"
            android:gravity="center"
            android:text="@string/banner_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="275dp"
            android:layout_height="50dp"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:background="@android:color/background_light"
            android:gravity="center"
            android:hint="@string/user_name"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etUserPassword"
            android:layout_width="275dp"
            android:layout_height="50dp"
            android:layout_below="@+id/etUserName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@android:color/background_light"
            android:gravity="center"
            android:hint="@string/Password"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="275dp"
            android:layout_height="50dp"
            android:layout_below="@+id/etUserPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btClearText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignStart="@+id/tvUserPassword"
                android:layout_below="@+id/tvUserPassword"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="#E0E0E0"
                android:text="@string/button_clear"
                android:textColor="#848686" />

            <Button
                android:id="@+id/btLogin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignEnd="@+id/tvUserPassword"
                android:layout_below="@+id/tvUserPassword"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="#3B444B"
                android:text="@string/button_login"
                android:textColor="@android:color/background_light" />

        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>